--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,19 @@ body {
    Add styling for your photo slider 
 }*/
 /* Home.css */
+.welcomeNoteCard {
+  background-color: #f9e65f;
+  border-radius: 10px;
+  border: 2px solid #24184e;
+  width: calc(80% - 80px);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 20px 20px 0 20px;
+  /*justify-content: space-between;*/
+  align-items: center;
+}
+
 .card-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -75,13 +88,16 @@ body {
   padding: 20px;
   display: flex;
   flex-direction: column;
+  height:300px;
   /*justify-content: space-between;*/
   align-items: left;
+  
 }
+
 .card1 {
   background-color: #D0D872;
   border-radius: 10px;
-  width:330px;
+  width:1200px;
   
   padding: 20px;
   
@@ -104,6 +120,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+  
   margin-top: 20px;
 }
 
@@ -120,6 +137,10 @@ body {
   padding: 10px;
   text-align: left;
 }
+.card .note {
+  margin-top: auto; /* Adjust the bottom value to your liking */
+  font-size:14px;
+}
 .content ul {
   list-style-type: none;
   padding-left: 0;
@@ -134,7 +155,121 @@ body {
   
 }
 .custom-carousel {
- width:1200px;
+ 
+ display: flex;
  /* Center the carousel horizontally */
   padding: 0 20px;/* Add padding to the left and right */
+}
+
+
+.interac {
+  display: flex;
+  align-items: center;
+}
+
+.interac img {
+  margin-left: 60px;
+}
+
+.interac b {
+  margin: 0;
+}
+
+.cheque {
+  display: 'flex';
+  justify-content: 'flex-end';
+   align-items: 'center';
+    margin-right: '60px';
+}
+
+.cheque img {
+  margin-left: 10px;
+}
+
+.gallery-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 16px;
+  margin-top:10px;
+}
+
+.gallery-container img {
+  width: 100%;
+  height: 100%;
+  
+  border-radius: 8px;
+  border: 4px solid #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.gallery-container img:hover {
+  transform: scale(1.1);
+}
+
+/* Modal.css */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.modal-content img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .card-grid {
+    grid-template-columns: 1fr; /* Change to a single column layout */
+    padding: 10px; /* Reduce padding for smaller screens */
+    min-height: auto; /* Remove max-height to allow content to expand */
+  }
+  .card-grid1 {
+    grid-template-columns: 1fr; /* Change to a single column layout */
+    padding: 10px; /* Reduce padding for smaller screens */
+    min-height: auto; /* Remove max-height to allow content to expand */
+  }
+  .card1 {
+    justify-content: space-between;
+    align-items: center;
+    width: 400px;
+  }
+  
+  .interac {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .interac img {
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+
+  .cheque {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .cheque img {
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+  
+  
+  
 }
