--- a/src/style.css
+++ b/src/style.css
@@ -147,10 +147,12 @@ header {
 	}
 	.left-section {
 		text-align: left;
+		font-size: 12px;
 	  }
 	  
 	  .right-section {
 		text-align: right;
+		font-size: 12px;
 	  }
 	  
   }
