--- a/src/App.css
+++ b/src/App.css
@@ -240,7 +240,7 @@ body {
     min-height: auto; /* Remove max-height to allow content to expand */
   }
   .card {
-    width: 100%; /* Make the card full width on smaller screens */
+    width: auto; /* Make the card full width on smaller screens */
     height: auto; /* Allow the height to adjust based on content */
   }
   .card-grid1 {
