--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,7 @@ header {
 	  padding: 5px 10px;
 	  font-size: 10px;
 	  color: #fdfdfc;
-	  background: radial-gradient(circle, #e68447, #f5db95);
+	  background: radial-gradient(circle, #e67147, #ffb371);
 	  border-right: 0.5px solid #e68447;
 	  border-left: 0.5px solid #e68447;
 	}
