--- a/src/style.css
+++ b/src/style.css
@@ -83,8 +83,8 @@ header {
 	header nav a {
 	  padding: 5px 10px;
 	  font-size: 10px;
-	  color: #fdfdfc;
-	  background: radial-gradient(circle, #e68447, #f5db95);
+	  color: #0404f8;
+	  
 	  border-right: 0.5px solid #e68447;
 	  border-left: 0.5px solid #e68447;
 	}
